# ghidra-docker-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
plans/superpowers/plans/: 2026-03-27-ease-of-use.md
plans/superpowers/specs/: 2026-03-27-ease-of-use-design.md
scripts/: entrypoint.sh  install.ps1  install.sh
src/ghidra_mcp/: __init__.py  __main__.py  api_registry.py  ghidra_bridge.py  server.py  tool_registry.py
tests/: conftest.py  test_bridge.py  test_cli.py  test_code_mode.py  test_script_mode.py  test_tools.py  test_validation.py
