[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ghidra-mcp"
version = "0.1.0"
description = "Ghidra MCP server for binary analysis and malware reverse engineering"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.9",
    "pyghidra>=3.0.2",
]

[project.optional-dependencies]
sse = ["uvicorn>=0.30"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
ghidra-mcp = "ghidra_mcp.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
